--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@hapi/hapi": "^20.1.3"
+    "@hapi/hapi": "^20.1.3",
+    "joi": "^17.4.0"
   }
 }
